# SimSub-DP

./: README.md
ExpcSimSub/DTW/: cSimSub.py
ExpcSimSub/Frechet/: cSimSub.py
ExpsSimSub/: knn_evaluate.py  simptraj_readout.py
ExpsSimSub/sSimSub/: CMakeLists.txt  README.md  TrajSim.cpp  TrajSim.h  constant.h  distance.cpp  distance.h  main.cpp  run_demo.sh  utils.cpp  utils.h
